--- a/games/snake/ai/cpp/config/config_paper_10x10.yaml
+++ b/games/snake/ai/cpp/config/config_paper_10x10.yaml
@@ -23,6 +23,8 @@ selfplay:
   games: 1000
   workers: 8
   temp_decay: 30
+  inference_batch_size: 256
+  inference_wait_us: 1000
 
 train:
   iterations: 200
